Added More Buttons

--- a/Styles/colors.css
+++ b/Styles/colors.css
@@ -1,7 +1,7 @@
 :root {
     --beckyApp-colorBlack: #000000;
     --beckyApp-colorWhite: #ffffff;
-    --beckyApp-color1: #ff0000;
+    --beckyApp-color1: #c66cce;
     --beckyApp-color2: #ff5e00;
     --beckyApp-color3: #ffee00;
     --beckyApp-color4: #1eff00;
